sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:22: error: Unmatched closing brace '}' ignored here
}
^